was add endpoint to time stamp and other refactoring
